# phase4

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile
.github/workflows/: cmake-macos.yml  cmake-multi-platform.yml
benchmarks/: CMakeLists.txt  default_position.b.cpp  valid_move_check.b.cpp
include/phase4/common/: bitset.h  castling.h  direction.h  distance.h  game_phase.h  piece_color.h  point.h  position.h  random.h  square.h  wall_operations.h
include/phase4/engine/ai/score/: evaluation.h  evaluation_constants.h  evaluation_statistics.h  tapered_evaluation.h
include/phase4/engine/ai/score/evaluators/: bishop_evaluator.h  king_safety_evaluator.h  material_evaluator.h  mobility_evaluator.h  pawn_structure_evaluator.h  position_evaluator.h  rook_evaluator.h
include/phase4/engine/ai/score/piece_square_tables/: bishop_tables.h  king_tables.h  knight_tables.h  pawn_tables.h  piece_square_table_data.h  queen_tables.h  rook_tables.h  table_operations.h
include/phase4/engine/ai/search/: iterative_deepening.h  nega_max.h  quiescence_search.h  search_context.h  search_statistics.h
include/phase4/engine/ai/time/: time_scheduler.h
include/phase4/engine/board/: board_constants.h  evaluation_constants.h  operators.h  position.h  position_moves.h  position_state.h  search_constants.h  session.h  zobrist_hashing.h
include/phase4/engine/board/operators/: bishop_operator.h  king_operator.h  knight_operator.h  pawn_operator.h  queen_operator.h  rook_operator.h
include/phase4/engine/board/ordering/: history_heuristic.h  killer_heuristic.h  move_ordering.h  move_ordering_constants.h  see_piece.h  static_exchange_evaluation.cpp  static_exchange_evaluation.h
include/phase4/engine/board/piece_square_tables/: bishop_tables.h  king_tables.h  knight_tables.h  pawn_tables.h  piece_square_table_data.h  queen_tables.h  rook_tables.h  table_operations.h
include/phase4/engine/board/transposition/: evaluation_hash_table.h  evaluation_hash_table_entry.h  hash_table_constants.h  hash_tables.h  pawn_hash_table.h  pawn_hash_table_entry.h  transposition_table.h  transposition_table_entry.h  transposition_table_entry_flags.h
include/phase4/engine/common/: bitboard.h  bitset.h  castling.h  direction.h  distance.h  evaluation_constants.h  fast_vector.h  field_index.h  game_phase.h  math.h  piece_color.h  piece_type.h  position.h  position_constants.h  random.h  safe_vector.h  square.h  util.h  vector.h  wall_operations.h
include/phase4/engine/fen/: fen_to_position.h  fen_validator.h  lichess_csv_parser.h  position_to_fen.h
include/phase4/engine/moves/: move.h  move_flags.h  moves_generator.h  result.h
include/phase4/engine/moves/magic/: attacks_generator.h  magic_bitboards.h  magic_container.h  magic_keys.h  magic_shifts.h  permutation_generator.h  permutations_generator.h
include/phase4/engine/moves/patterns/: box_pattern_generator.h  chain_pattern_generator.h  diagonal_pattern_generator.h  file_pattern_generator.h  forward_box_pattern_generator.h  jump_pattern_generator.h  outer_files_pattern_generator.h  passing_pattern_generator.h  rank_pattern_generator.h
include/phase4/engine/score/: evaluation_constants.h
include/phase4/engine/score/piece_square_tables/: bishop_tables.h  king_tables.h  knight_tables.h  pawn_tables.h  piece_square_table_data.h  queen_tables.h  rook_tables.h  table_operations.h
include/phase4/engine/transposition/: hash_table_constants.h  hash_tables.h  pawn_hash_table.h  pawn_hash_table_entry.h
include/phase4/moves/: move.h  move_flags.h
scripts/: clang-tidy.sh
src/commands/: CMakeLists.txt  fen_finder.m.cpp  generate_magics.m.cpp  solve_puzzles.m.cpp
tests/: CMakeLists.txt
tests/doctest/: CMakeLists.txt
tests/phase4/: main.t.cpp
tests/phase4/common/: bitset.t.cpp  castling.t.cpp  distance.t.cpp  piece_color.t.cpp  square.t.cpp
tests/phase4/engine/ai/score/: evaluation.t.cpp
tests/phase4/engine/ai/score/evaluators/: bishop_evaluator.t.cpp  king_safety_evaluator.t.cpp  material_evaluator.t.cpp  mobility_evaluator.t.cpp  pawn_structure_evaluator.t.cpp  position_evaluator.t.cpp  rook_evaluator.t.cpp
tests/phase4/engine/ai/search/: iterative_deepening.t.cpp  nega_max.t.cpp  quiescence_search.t.cpp
tests/phase4/engine/ai/time/: time_scheduler.t.cpp
tests/phase4/engine/board/: operators.t.cpp  position.t.cpp  position_moves.t.cpp  position_state.t.cpp  session.t.cpp  zobrist_hashing.t.cpp
tests/phase4/engine/board/operators/: bishop_operator.t.cpp  king_operator.t.cpp  knight_operator.t.cpp  pawn_operator.t.cpp  queen_operator.t.cpp  rook_operator.t.cpp
tests/phase4/engine/board/ordering/: move_ordering.t.cpp  see_piece.t.cpp  static_exchange_evaluation.t.cpp
tests/phase4/engine/board/piece_square_tables/: table_operations.t.cpp
tests/phase4/engine/board/transposition/: evaluation_hash_table.t.cpp  pawn_hash_table.t.cpp  transposition_table.t.cpp
tests/phase4/engine/common/: bitboard.t.cpp  bitset.t.cpp  castling.t.cpp  distance.t.cpp  fast_vector.t.cpp  math.t.cpp  piece_color.t.cpp  piece_type.t.cpp  random.t.cpp  safe_vector.t.cpp  square.t.cpp  util.t.cpp  wall_operations.t.cpp
tests/phase4/engine/fen/: fen_to_position.t.cpp  fen_validator.t.cpp  position_to_fen.t.cpp
tests/phase4/engine/moves/: move.t.cpp  move_flags.t.cpp  moves_generator.t.cpp
tests/phase4/engine/moves/magic/: attacks_generator.t.cpp  magic_bitboards.t.cpp  permutations_generator.t.cpp
tests/phase4/engine/moves/patterns/: box_pattern_generator.t.cpp  chain_pattern_generator.t.cpp  diagonal_pattern_generator.t.cpp  file_pattern_generator.t.cpp  forward_box_pattern_generator.t.cpp  outer_files_pattern_generator.t.cpp  passing_pattern_generator.t.cpp  rank_pattern_generator.t.cpp
